# HomoGebra

./: .clang-format  .gitignore  Doxyfile.doxygen  HomoGebra.sln  README.md  imgui.ini
.github/workflows/: ci-cmake.yml  main.yml  static.yml
Documentation/html/: _equation_8cpp.html  _equation_8cpp__incl.map  _equation_8h__dep__incl.md5  _equation_8h__incl.md5  _g_u_i_8cpp.html  _g_u_i_8cpp__incl.map  _g_u_i_8h.html  _g_u_i_8h__dep__incl.md5  _g_u_i_8h__incl.map  _g_u_i_8h__incl.md5  _g_u_i_8h_source.html  _geometric_object_8h.html  _geometric_object_8h__dep__incl.map  _geometric_object_8h__incl.map  _geometric_object_8h__incl.md5  _geometric_object_8h_source.html  _geometric_object_body_8cpp.html  _geometric_object_body_8cpp__incl.map  _geometric_object_body_8h.html  _geometric_object_body_8h__dep__incl.map  _geometric_object_body_8h__dep__incl.md5  _geometric_object_body_8h__incl.map  _geometric_object_body_8h_source.html  _geometric_object_factory_8cpp.html  _geometric_object_factory_8cpp__incl.map  _geometric_object_factory_8h.html  _geometric_object_factory_8h__incl.map  _geometric_object_factory_8h__incl.md5  _geometric_object_factory_8h_source.html  _geometric_object_implementation_8cpp.html  _geometric_object_implementation_8cpp__incl.map  _geometric_object_implementation_8cpp__incl.md5  _plane_8cpp.html  (+190 more)
HomoGebra/: Assert.h  Button.h  ButtonBody.cpp  ButtonBody.h  ButtonElement.cpp  ButtonElement.h  ButtonElementBody.cpp  ButtonElementBody.h  ButtonImplementation.h  ButtonsImplementations.h  CMakeLists.txt  ClassDiagram.cd  Complex.cpp  Complex.h  Construction.cpp  Construction.h  Coordinate.cpp  Coordinate.h  Creation.cpp  Creation.h  Dictionary.h  DistanceUtilities.h  Equation.cpp  Equation.h  EventConverter.cpp  EventConverter.h  EventNotifier.cpp  EventNotifier.h  FactoryWrapper.h  GUI.cpp  GUI.h  GeometricObject.cpp  GeometricObject.h  GeometricObjectBody.cpp  GeometricObjectBody.h  GeometricObjectFactory.cpp  GeometricObjectFactory.h  GeometricObjectImplementation.cpp  GeometricObjectImplementation.h  Gui.cpp  (+38 more)
HomoGebra Tests/: CMakeLists.txt  HomoGebra Tests.vcxproj  HomoGebra Tests.vcxproj.filters  test.cpp
docs/: index.html
(+3289 files in other folders)
